[gd_scene load_steps=14 format=2]

[ext_resource path="res://tscn/shaders/blur.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscn/ui/button/button_focus.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/font/smallest_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://tscn/ui/start/net_page.gd" type="Script" id=4]
[ext_resource path="res://tscn/ui/button/button_default.tres" type="StyleBox" id=5]
[ext_resource path="res://tscn/ui/button/button_press.tres" type="StyleBox" id=6]
[ext_resource path="res://tscn/ui/button/button_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://tscn/ui/edit/bg.tres" type="StyleBox" id=8]
[ext_resource path="res://tscn/ui/start/loading.tscn" type="PackedScene" id=9]
[ext_resource path="res://tscn/ui/null.tres" type="StyleBox" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blur_amount = 2.0

[sub_resource type="ImageTexture" id=3]
flags = 0
flags = 0
size = Vector2( 1, 1 )

[node name="net_page" type="Node2D"]
script = ExtResource( 4 )

[node name="blur" parent="." instance=ExtResource( 1 )]
material = SubResource( 2 )
texture = SubResource( 3 )

[node name="ip" type="Label" parent="."]
margin_left = 455.13
margin_top = 268.759
margin_right = 495.13
margin_bottom = 310.759
custom_fonts/font = ExtResource( 3 )
text = "ipï¼š"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip_line" type="LineEdit" parent="."]
margin_left = 527.0
margin_top = 269.0
margin_right = 643.0
margin_bottom = 311.0
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_selected = Color( 0.396078, 0.396078, 0.396078, 1 )
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="port" type="Label" parent="."]
margin_left = 690.235
margin_top = 268.759
margin_right = 731.235
margin_bottom = 308.759
custom_fonts/font = ExtResource( 3 )
text = "port:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="port_line" type="LineEdit" parent="."]
margin_left = 750.0
margin_top = 269.0
margin_right = 818.0
margin_bottom = 311.0
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_selected = Color( 0.396078, 0.396078, 0.396078, 1 )
text = "45536"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
margin_left = 425.995
margin_top = 177.224
margin_right = 508.995
margin_bottom = 217.224
custom_fonts/font = ExtResource( 3 )
text = "name_ui"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_line" type="LineEdit" parent="."]
margin_left = 526.995
margin_top = 177.224
margin_right = 642.995
margin_bottom = 219.224
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_selected = Color( 0.396078, 0.396078, 0.396078, 1 )
text = "xxx"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connect" type="Button" parent="."]
margin_left = 448.0
margin_top = 383.0
margin_right = 580.0
margin_bottom = 425.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "connect_ui"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="Button" parent="."]
margin_left = 708.0
margin_top = 383.0
margin_right = 828.0
margin_bottom = 425.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "cancel_ui"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loading" parent="." instance=ExtResource( 9 )]
visible = false
